minor css changes

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1154,6 +1154,7 @@ select {
 }
 .modal-row-main {
     margin-top: 15px;
+    margin-bottom: 45px;
 }
 
 .economy-table .modal-label-block {
@@ -1421,6 +1422,12 @@ select {
         font-size: 30px;
         line-height: 38px;
     }
+    .economy-row .input-col label {
+        font-size: 30px !important;
+    }
+    .economy-table .label-block, .economy-table .modal-label-block {
+        width: 22%;
+    }
 }
 
 @media (max-width:1300px){
@@ -1465,8 +1472,47 @@ select {
     .information-header-nav ul li {
         padding: 22px 29px 
       }
+      .economy-table .label-block {
+        width: 27%;
+    }
+    .economy-table .modal-label-block{
+        width: 33%;
+    }
+    .economy-row .input-col label {
+        font-size: 24px !important;
+    }
+    .modal-input-col label {
+        font-size: 24px !important;
+    }
+}
+@media (max-width:1024px){
+.economy-table .label-block {
+    width: 22%;
+}
+.economy-table .label-block, .economy-table .modal-label-block {
+    font-size: 22px;
+}
+.economy-row .input-col label {
+    font-size: 22px !important;
+}
+.modal-input-col label {
+    font-size: 22px !important;
+}
 }
 @media (max-width:991px){
+    .economy-table .label-block {
+        width: 23%;
+    }
+    .modal-input-col label {
+        font-size: 21px !important;
+    }
+    .economy-row .input-col label {
+        font-size: 21px !important;
+    }
+    .economy-table .main-li, .food-shopping .main-li {
+        font-size: 24px;
+        line-height: 32px;
+    }
     .login-img {
         position: unset;
     }
@@ -1606,12 +1652,12 @@ select {
         font-size: 14px;
         line-height: 18px;
     }
-    .general-form, .Additional  {
+    .general-form, .Additional, .economy-table, .food-shopping, .investments  {
         background: #DCE0D9;
-        padding: 0 28px;
+        padding: 0 15px;
         margin-bottom: 0;
     }
-    .general-form .bg-lightgray-color, .Additional .bg-lightgray-color {
+    .general-form .bg-lightgray-color, .Additional .bg-lightgray-color, .economy-table .bg-color, .food-shopping .bg-color, .investments .bg-color{
         background:none;
     }
     .general-form{
@@ -1622,7 +1668,7 @@ select {
         padding-top: 0px;
         padding-bottom: 0px;
     }
-    .Additional .card {
+    .Additional .card, .card-box-btn {
         padding-bottom: 100px;
     }
     .card.card-par p {
@@ -1908,6 +1954,105 @@ select {
     }
     .additional-form-outer .sub-btn .check-input {
         width: 100%;
+    }
+    .economy-table .main-li, .food-shopping .main-li {
+        font-size: 16px;
+        line-height: 18px;
+    }
+    .form-div .inner-li {
+        font-size: 14px !important;
+        line-height: 22px;
+    }
+    .form-div .inner-li {
+        padding-left: 0;
+    }
+    .economy-row-main {
+        border:none; 
+         padding: 0px 0px; 
+         }
+         
+         .economy-row, .economy-table .modal-row {
+    
+        align-items: flex-start;
+        }
+        .economy-table .label-block {
+        width: 34%;
+    }
+    /* .economy-table .input-block {
+        width: 100%;
+    } */
+    .economy-table .input-block .input-row, .economy-table .modal-input-block .modal-input-row {
+        flex-wrap: wrap;
+    }
+    .economy-table .input-block .input-row .input-col, .economy-table .modal-input-block .modal-input-row .modal-input-col {
+        padding: 0 8px;
+        width: 50%;
+        margin-bottom: 13px;
+    }
+    .economy-row .input-col label {
+        font-size: 16px !important;
+        margin-bottom: 7px;
+    }
+    .economy-table .input-block .input-row .input-col label {
+        display: block;
+    }
+    .economy-table .card {
+        width: 100%;
+    }
+    .economy-table .label-block, .economy-table .modal-label-block {
+        text-align: left;
+    }
+    .economy-table .label-block, .economy-table .modal-label-block {
+        font-size: 22px;
+        font-weight: 500;
+        margin-right: 20px;
+    }
+    .economy-row {
+        padding: 0 0 17px;
+        border-bottom: 1px solid #81C14B;
+        margin: 0 0 24px;
+    }
+    .economy-table .modal-row {
+        flex-direction: column;
+    }
+    .economy-table .modal-input-block .modal-input-row .modal-input-col:first-of-type {
+        width: 100%;
+        text-align: left !important;
+    }
+    .modal-input-col label {
+        text-align: left !important;
+        font-size: 14px !important;
+    }
+    .economy-table.economy-table-tow {
+       margin-bottom: 0px
+    }
+    .food-shopping.top{
+        margin-bottom: 0;
+    }
+    .food-shopping.top .bg-color {
+        padding-top: 0;
+        margin-bottom: 0px;
+    }
+    .investments .card p {
+        font-size: 16px;
+        line-height: 21px;
+    }
+    .investments .card p:last-of-type {
+        font-size: 15px;
+        line-height: 20px;
+    }
+    .investments h3 {
+        text-align: left;
+        font-size: 23px;
+        line-height: 26px;
+        font-weight: 300;
+        margin-bottom: 20px;
+    }
+    .investments .bg-color{
+        padding-top: 0;
+    }
+    .investments {
+        padding-top: 34px;
     }
     /*********************** forgotpaddword *********************/
 
