Minor Css changes

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -748,18 +748,7 @@ section.protecting-data {
 
 /********************information css*********************/
 
-/****** line no.578 css*******/
-/* .cricle-box{ 
-    width: 134px;
-    height: 134px;
-    margin-bottom: 30px;
-    border-radius: 50%;
-    border: 4px solid #81c14b;
-    padding: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-} */
+
 .information .information-icon-box .information-cricle-box {
     width: 116px;
     height: 116px;
@@ -795,7 +784,10 @@ section.protecting-data {
     right: -36px;
     box-shadow: -1px -1px 3px 0px #0000001f;
 }
-.information-header .col:last-child .information-cricle-box:after {
+.information-header .col-div:last-child .information-cricle-box:after {
+    display: none;
+}
+.information-header .col:last-child{
   display: none;
 }
 /****** line no.574 css*******/
@@ -1329,11 +1321,17 @@ select {
     margin-bottom: 40px;
 }
 .Personal-information {
-    margin-bottom: 130px;
+    margin-bottom: 80px;
     margin-top: 80px;
+}
+.bg-My-Account .Personal-information{
+    margin-bottom: 13   0px;
 }
 .information-box .submit-btn {
     margin: 100px 0 0 0;
+}
+.submissions {
+    margin-bottom: 130px;
 }
 
 /*****************accordion****************/
@@ -1460,7 +1458,9 @@ select {
     background: transparent;
     color: #000;
     border: 2px solid #000;
+    margin-left: 25px;
 }
+
 .submission-form {
     display: flex;
     align-items: center;
@@ -1605,6 +1605,9 @@ select {
     .economy-table .label-block, .economy-table .modal-label-block {
         width: 22%;
     }
+    .submissions .submission-form .form-div {
+        width: 70%;
+    }
 }
 
 @media (max-width:1300px){
@@ -1662,6 +1665,13 @@ select {
         font-size: 24px !important;
     }
 }
+
+@media (max-width:1080px){
+.submissions .submission-form .form-div {
+    width: 62%;
+}
+}
+
 @media (max-width:1024px){
 .economy-table .label-block {
     width: 22%;
@@ -1693,6 +1703,9 @@ select {
 }
 .information-box {
     margin-bottom: 37px;
+}
+.admin-dashboard, .submissions-bg-color {
+    padding: 40px;
 }
 }
 @media (max-width:991px){
@@ -2335,7 +2348,9 @@ select {
         }
         .Personal-information {
             margin-top: 40px;
+            margin-bottom: 40px;
         }
+        
         .information-box, .admin-dashboard, .admin-dashboard, .submissions-bg-color {
             padding: 35px 20px;
         }
@@ -2384,8 +2399,15 @@ select {
         }
 
         /**************admin-view ****************/
+        .admin-view {       
+            margin-bottom: 100px 
+        }
         .admin-view-bg-color {
-            padding: 35px 20px;
+            padding: 35px 15px;
+        }
+        .admin-view-content{
+            justify-content: center;
+            margin-top: 30px;
         }
         .admin-view-header .sub-heading {
             width: 100%;
@@ -2394,11 +2416,44 @@ select {
           flex-direction: column-reverse;
         }
         .admin-view-header {
-           display:unset !important;
-           text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+        }
+        .admin-view-content .admin-text {
+            margin-bottom: 30px;
+        }
+        .admin-header-btn .btn {
+            margin-bottom: 25px;
         }
         .slider-labels span {
             font-size: 11px;
+        }
+        .submissions .container {
+            padding: 0;
+        }
+        .submissions-bg-color {
+            border-radius: 0;
+        }
+        .submissions {
+            margin-bottom: 0px;
+        }
+        .submissions-header-btn .submit-btn {
+            width: 92%;
+            margin: 0 auto;
+        }
+        .submissions-header-btn .submit-btn:first-of-type{
+           margin-bottom: 25px;
+        }
+        .submissions-header, .submission-form  {
+            justify-content: center;
+        }
+        .form-div label {
+           text-align: center;
+        }
+        .bg-My-Account .Personal-information{
+            margin-bottom: 100px;
         }
     /*********************** forgotpaddword *********************/
 
