--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1576,10 +1576,18 @@ select {
     color: white;
   }
 
+/****************** password-eye-css ******************/
 
 
-
-
+.login-pass-filed{
+	display: flex;
+    align-items: center;
+    position: relative;
+}
+.login-pass-filed .fa-eye-slash{
+	position: absolute;
+    right: 15px;
+}
 
 
 
